--- a/war/pom.xml
+++ b/war/pom.xml
@@ -134,15 +134,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.sk89q.worldedit</groupId>
+      <groupId>com.tommytony</groupId>
       <artifactId>worldedit-bukkit</artifactId>
-      <version>7.0.0-20181118.055910-28</version>
-      <type>jar</type>
-    </dependency>
-    <dependency>
-      <groupId>com.sk89q.worldedit</groupId>
-      <artifactId>worldedit-core</artifactId>
-      <version>7.0.0-20181118.055910-28</version>
+      <version>7.0.0-beta-01</version>
       <type>jar</type>
     </dependency>
     <dependency>
