Drop TagAPI support
TagAPI has been dead for several years. Also upgrade Java to 1.8, why not.

--- a/war/src/main/resources/plugin.yml
+++ b/war/src/main/resources/plugin.yml
@@ -5,7 +5,7 @@ description: ${project.description}
 author: tommytony
 website: ${project.url}
 main: com.tommytony.war.War
-softdepend: [Spout, TagAPI, WorldEdit, Vault]
+softdepend: [WorldEdit, Vault]
 permissions:
   war.*:
     description: Full War permissions. Create and destroy warzones. Change War configuration.
