--- a/war/pom.xml
+++ b/war/pom.xml
@@ -45,6 +45,7 @@
     </repository>
   </distributionManagement>
   <build>
+    <defaultGoal>compile</defaultGoal>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
