--- a/war/pom.xml
+++ b/war/pom.xml
@@ -3,14 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.tommytony</groupId>
   <artifactId>war</artifactId>
-  <version>2.0.0-RC3-SNAPSHOT</version>
+  <version>2.0.0-RC4-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>War</name>
   <url>http://war.tommytony.com</url>
   <description>Minecraft PVP arenas (called warzones) for a fast-paced and structured PVP experience with TDM, CTF and more!</description>
-  <prerequisites>
-    <maven>2.2.1</maven>
-  </prerequisites>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -107,7 +104,8 @@
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
-      <version>1.13-R0.1-SNAPSHOT</version>
+      <version>1.14.4-R0.1-SNAPSHOT</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
@@ -119,7 +117,7 @@
     <dependency>
       <groupId>com.tommytony</groupId>
       <artifactId>worldedit-bukkit</artifactId>
-      <version>7.0.0-beta-03</version>
+      <version>7.0.1</version>
       <type>jar</type>
     </dependency>
     <dependency>
